--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 
 DATABASE_URL="mongodb+srv://musiur:musiur@cluster0.q9dw0v4.mongodb.net/tasker"
 # BASEURL="http://localhost:3000/api"
-BASEURL="nextjs-hook-form-zod.vercel.app/api"
+BASEURL="https://nextjs-hook-form-zod.vercel.app/api
